tests/ui/trait-bounds/maybe-bound-generics-deny.rs
fn uwu<T: ?Sized<i32>>() {}
//~^ ERROR trait takes 0 generic arguments but 1 generic argument was supplied

fn main() {}
